[gd_scene load_steps=3 format=3 uid="uid://ce6s6ofk01nub"]

[ext_resource type="Script" path="res://Screens/Battle/map/UnitModel.gd" id="1_hc8ff"]
[ext_resource type="SpriteFrames" uid="uid://bqwdhsbsyl6vv" path="res://Screens/Battle/sprites/Placeholder.tres" id="2_v0wcy"]

[node name="UnitModel" type="Node2D"]
script = ExtResource("1_hc8ff")
sprite_frames = ExtResource("2_v0wcy")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_v0wcy")
animation = &"FrontWalk"
offset = Vector2(0, -64)

[connection signal="facing_changed" from="." to="." method="_on_facing_changed"]
[connection signal="sprite_frames_changed" from="." to="." method="_on_sprite_frames_changed"]
